# ml_algos

./: .gitignore
clustering/: CMakeLists.txt  comp_fail.sh  comp_success.sh  kmeans.cpp  kmeans.h  main.cpp  read.h  read_csv.cpp
clustering/src/: kmeans.cpp  kmeans.h  main.cpp  read.h
decision_trees/: Makefile  main  main.cpp
